<resources>
    <string name="app_name" translatable="false">SecretSanta</string>
    <string name="rooms_menu_title">Rooms</string>
    <string name="create_menu_title">New room</string>
    <string name="profile_title">Profile</string>
    <string name="user_registration_title">Registration</string>
    <string name="username_input_hint">Enter nickname</string>
    <string name="register_button_title">Register</string>
    <string name="log_out_button_content_description">log out button</string>
    <string name="avatar_content_description">avatar</string>
    <string name="edit_button_content_description">edit button</string>
    <string name="also_you_can">Also you can</string>
    <string name="delete_your_account"> delete your profile</string>
    <string name="new_room_name_hint">New room name</string>
    <string name="edit_username_title">Edit profile</string>
    <string name="save">Save</string>
    <string name="block_button">block button</string>
    <string name="leave_button">leave button</string>
    <string name="join_room_button">join room button</string>
    <string name="join_room_title">Join room</string>
    <string name="room_id_hint">Room ID</string>
    <string name="room_password_hint">Room password</string>
    <string name="join_room_button_hint">Join room</string>
    <string name="new_username_hint">New username</string>
    <string name="globe_button">rooms list</string>
    <string name="create_room_button">create room</string>
    <string name="join_room">Join room</string>
    <string name="copy_link_description">copy link</string>
    <string name="copy_link">Copy link</string>
    <string name="retry_button_text">Retry</string>
    <string name="sign_in_firebase_button_text">Sign in</string>
    <string name="create_room_title">Create room</string>
    <string name="password_input_hint">New password (optional)</string>
    <string name="maximum_gift_price_hint">Maximum gift price (optional)</string>
    <string name="room_created_successfully">Room created successfully!</string>
    <string name="create_another_room">Create yet another</string>
    <string name="rooms_list_title">My rooms</string>
    <string name="room_players_title">Room Players</string>
    <string name="logout_dialog_title">Quit the app</string>
    <string name="logout_dialog_confirmation">Are you sure you want to logout?</string>
    <string name="dialog_leave_button">Logout</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_profile_dialog_title">Profile deletion</string>
    <string name="delete_profile_dialog_confirmation">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="date_picker_hint">Choose deadline date (optional)</string>
    <string name="room_name_placeholder"><i>Room name:</i> %1$s</string>
    <string name="room_password_placeholder"><i>Room password:</i> %1$s</string>
    <string name="room_max_price_placeholder"><i>Max gift price:</i> %1$d</string>
    <string name="room_deadline_placeholder"><i>Deadline:</i> %1$s</string>
    <string name="members_count_placeholder">%1$s members</string>
    <string name="game_started_text">Game started</string>
    <string name="waiting_for_start">Waiting for start</string>
    <string name="deadline_placeholder"><i>Until:</i> %1$s</string>
    <string name="room_owner_placeholder"><i>Room owner:</i> %1$s</string>
    <string name="room_id_placeholder"><i>Room ID:</i> %1$s</string>
    <string name="room_recipient_placeholder"><i>Your gift recipient:</i> %1$s</string>
    <string name="delete">Delete</string>
    <string name="start_game">Start game</string>
    <string name="stop_game">Stop game</string>
    <string name="not_enough_players">Not enough players</string>
    <string name="room_name_empty_error">Room name can\'t be empty</string>
    <string name="room_id_or_password_empty_error">Room ID and password can\'t be empty</string>
    <string name="name_blank_error">Name could not be blank</string>
    <string name="name_too_long">Name too long</string>
    <string name="max_price_too_high_error">Maximum price too high</string>
    <string name="password_length_too_high_error">Password too long</string>
    <string name="wrong_max_price">Illegal maximum price</string>
    <string name="kick_dialog_button">Kick</string>
    <string name="kick_confirmation">Are you sure you want to kick this player</string>
    <string name="kick_dialog">Kick user</string>
    <string name="leave_dialog">Leave room</string>
    <string name="leave_confirmation">Are you sure you want to leave this room?</string>
    <string name="leave_dialog_button">Leave</string>
    <string name="message_for_devs_placeholder">Message for developer: %1$s</string>
    <string name="internet_connection_error">Internet connection error.\nServer unavailable, try later or check your connection.</string>
    <string name="santa_exception_placeholder">Error: %1$s</string>
    <string name="empty_rooms_list_error">You did not join any room yet</string>
    <string name="wrong_credentials_format">Wrong credentials</string>
    <string name="game_already_started_error">Game already started</string>
    <string name="user_already_in_room_exception">User already in room</string>
    <string name="room_not_exists_error">Room not exists</string>
    <string name="user_not_exists_error">User not exists</string>
    <string name="error">Something went wrong</string>
    <string name="room_length_too_high">Имя комнаты слишком длинное</string>
    <string name="error_image">Error image</string>
    <string name="invalid_password_format">Invalid password format, it should contains only A–Z a–z 0–9 and \'_\' character</string>
    <string name="password_too_short">Password too short</string>
</resources>