<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/profile_screen_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/logout_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/log_out_button_content_description"
        android:focusable="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="@+id/profile_title_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_title_text_view"
        app:tint="@color/colorPrimary" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/avatar_content_description"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title_text_view" />


    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:fontFamily="@font/open_sans_bold"
        android:singleLine="true"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:drawableEndCompat="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image"
        tools:text="kheynov_v" />

    <ProgressBar
        android:id="@+id/profile_progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/get_token_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/open_sans_bold"
        android:text="Debug: get token"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_profile_layout"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/delete_profile_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4sp"
            android:fontFamily="@font/open_sans"
            android:text="@string/also_you_can"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/delete_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/open_sans"
            android:text="@string/delete_your_account"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>